--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -363,17 +363,17 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="4425e6b0ebf64d24a4c50d0d0ecf174b-ea4b578f4cb04952b2d2e5fe6253802b" name="4425e6b0ebf64d24a4c50d0d0ecf174b" class="tab" checked><label for="4425e6b0ebf64d24a4c50d0d0ecf174b-ea4b578f4cb04952b2d2e5fe6253802b" >General</label>
-<input type="radio" id="4425e6b0ebf64d24a4c50d0d0ecf174b-2618e769b3654ceabf44cab2da05692b" name="4425e6b0ebf64d24a4c50d0d0ecf174b" class="tab" ><label for="4425e6b0ebf64d24a4c50d0d0ecf174b-2618e769b3654ceabf44cab2da05692b" >Startup</label>
-<input type="radio" id="4425e6b0ebf64d24a4c50d0d0ecf174b-15011f546f394c85b53ad21a463cf538" name="4425e6b0ebf64d24a4c50d0d0ecf174b" class="tab" ><label for="4425e6b0ebf64d24a4c50d0d0ecf174b-15011f546f394c85b53ad21a463cf538" >Android</label>
-<input type="radio" id="4425e6b0ebf64d24a4c50d0d0ecf174b-e4b6f63c8d9c44bd8556ff171dc09641" name="4425e6b0ebf64d24a4c50d0d0ecf174b" class="tab" ><label for="4425e6b0ebf64d24a4c50d0d0ecf174b-e4b6f63c8d9c44bd8556ff171dc09641" >iOS</label>
+<input type="radio" id="507f3e7fa5de4c34bcf5253a9bc00fdf-2ef4dcc4a8c5460a809bb7d2f2e2f0fa" name="507f3e7fa5de4c34bcf5253a9bc00fdf" class="tab" checked><label for="507f3e7fa5de4c34bcf5253a9bc00fdf-2ef4dcc4a8c5460a809bb7d2f2e2f0fa" >General</label>
+<input type="radio" id="507f3e7fa5de4c34bcf5253a9bc00fdf-07300eca07ec417899e17b5a91f751c8" name="507f3e7fa5de4c34bcf5253a9bc00fdf" class="tab" ><label for="507f3e7fa5de4c34bcf5253a9bc00fdf-07300eca07ec417899e17b5a91f751c8" >Startup</label>
+<input type="radio" id="507f3e7fa5de4c34bcf5253a9bc00fdf-937f8535d29e4a769b1842d10c9f76d3" name="507f3e7fa5de4c34bcf5253a9bc00fdf" class="tab" ><label for="507f3e7fa5de4c34bcf5253a9bc00fdf-937f8535d29e4a769b1842d10c9f76d3" >Android</label>
+<input type="radio" id="507f3e7fa5de4c34bcf5253a9bc00fdf-d4937092e2f54b9aaab6a75db1cdb69f" name="507f3e7fa5de4c34bcf5253a9bc00fdf" class="tab" ><label for="507f3e7fa5de4c34bcf5253a9bc00fdf-d4937092e2f54b9aaab6a75db1cdb69f" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
