--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -361,18 +361,18 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="080df153551c445eaab452e3f7455988-01bfce651dec41d5a41a0a47909b6369" name="080df153551c445eaab452e3f7455988" class="tab" checked=""><label for="080df153551c445eaab452e3f7455988-01bfce651dec41d5a41a0a47909b6369">General</label>
-<input type="radio" id="080df153551c445eaab452e3f7455988-a8dd24c9e70c4e9692e690e8849f6840" name="080df153551c445eaab452e3f7455988" class="tab"><label for="080df153551c445eaab452e3f7455988-a8dd24c9e70c4e9692e690e8849f6840">Startup</label>
-<input type="radio" id="080df153551c445eaab452e3f7455988-d1988e683bcd4944a7d0d011f05fa8b3" name="080df153551c445eaab452e3f7455988" class="tab"><label for="080df153551c445eaab452e3f7455988-d1988e683bcd4944a7d0d011f05fa8b3">Android</label>
-<input type="radio" id="080df153551c445eaab452e3f7455988-4044877ffc6042039d6d135f814a2156" name="080df153551c445eaab452e3f7455988" class="tab"><label for="080df153551c445eaab452e3f7455988-4044877ffc6042039d6d135f814a2156">iOS</label>
-<input type="radio" id="080df153551c445eaab452e3f7455988-39e767212f4f4395bf5dc85cefda31fd" name="080df153551c445eaab452e3f7455988" class="tab"><label for="080df153551c445eaab452e3f7455988-39e767212f4f4395bf5dc85cefda31fd">Windows</label>
+<input type="radio" id="eab4ea3414664a84a0a165ac2f98b706-02365d9d585845c0a791109f290e95ea" name="eab4ea3414664a84a0a165ac2f98b706" class="tab" checked=""><label for="eab4ea3414664a84a0a165ac2f98b706-02365d9d585845c0a791109f290e95ea">General</label>
+<input type="radio" id="eab4ea3414664a84a0a165ac2f98b706-57f43759a4684edb9f6def8cd7ac939e" name="eab4ea3414664a84a0a165ac2f98b706" class="tab"><label for="eab4ea3414664a84a0a165ac2f98b706-57f43759a4684edb9f6def8cd7ac939e">Startup</label>
+<input type="radio" id="eab4ea3414664a84a0a165ac2f98b706-1903a112ca8a406f9bb44519d8898bd4" name="eab4ea3414664a84a0a165ac2f98b706" class="tab"><label for="eab4ea3414664a84a0a165ac2f98b706-1903a112ca8a406f9bb44519d8898bd4">Android</label>
+<input type="radio" id="eab4ea3414664a84a0a165ac2f98b706-f19a89911d95474ab672d4351cce0bb9" name="eab4ea3414664a84a0a165ac2f98b706" class="tab"><label for="eab4ea3414664a84a0a165ac2f98b706-f19a89911d95474ab672d4351cce0bb9">iOS</label>
+<input type="radio" id="eab4ea3414664a84a0a165ac2f98b706-8f254198a0034877ab4808418fe73b1e" name="eab4ea3414664a84a0a165ac2f98b706" class="tab"><label for="eab4ea3414664a84a0a165ac2f98b706-8f254198a0034877ab4808418fe73b1e">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
