--- a/blehosting/getting-started.html
+++ b/blehosting/getting-started.html
@@ -363,16 +363,16 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="71e7af6177a8413f902ada88b28c345f-d5aff738c9ea4e8c9d8f19c66d072028" name="71e7af6177a8413f902ada88b28c345f" class="tab" checked><label for="71e7af6177a8413f902ada88b28c345f-d5aff738c9ea4e8c9d8f19c66d072028" >General</label>
-<input type="radio" id="71e7af6177a8413f902ada88b28c345f-1f6bf869de144b4aaa428e227996b631" name="71e7af6177a8413f902ada88b28c345f" class="tab" ><label for="71e7af6177a8413f902ada88b28c345f-1f6bf869de144b4aaa428e227996b631" >Startup</label>
-<input type="radio" id="71e7af6177a8413f902ada88b28c345f-67d0bac413dd42e6b0b322f951c36e1b" name="71e7af6177a8413f902ada88b28c345f" class="tab" ><label for="71e7af6177a8413f902ada88b28c345f-67d0bac413dd42e6b0b322f951c36e1b" >Android</label>
-<input type="radio" id="71e7af6177a8413f902ada88b28c345f-7666e4a98d764db490074b80fe3633a9" name="71e7af6177a8413f902ada88b28c345f" class="tab" ><label for="71e7af6177a8413f902ada88b28c345f-7666e4a98d764db490074b80fe3633a9" >iOS</label>
+<input type="radio" id="95914e941e414f729be505cc9adb544c-f41fa2bad2be44968810ed32ad8dd681" name="95914e941e414f729be505cc9adb544c" class="tab" checked><label for="95914e941e414f729be505cc9adb544c-f41fa2bad2be44968810ed32ad8dd681" >General</label>
+<input type="radio" id="95914e941e414f729be505cc9adb544c-93ffb573ec28454fa012bd70eb3e74a3" name="95914e941e414f729be505cc9adb544c" class="tab" ><label for="95914e941e414f729be505cc9adb544c-93ffb573ec28454fa012bd70eb3e74a3" >Startup</label>
+<input type="radio" id="95914e941e414f729be505cc9adb544c-942e2e17eb1c4f559fc70641f7e22b6e" name="95914e941e414f729be505cc9adb544c" class="tab" ><label for="95914e941e414f729be505cc9adb544c-942e2e17eb1c4f559fc70641f7e22b6e" >Android</label>
+<input type="radio" id="95914e941e414f729be505cc9adb544c-1bd45f3251cb49e388fbc4211ec1ee2e" name="95914e941e414f729be505cc9adb544c" class="tab" ><label for="95914e941e414f729be505cc9adb544c-1bd45f3251cb49e388fbc4211ec1ee2e" >iOS</label>
 <div class="tab__content">
 
 <p>|Area|Info|
