--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -361,17 +361,17 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="6b42630294df40228b6557971dff6c37-04a69dd16f3245f1b84171471ebc8727" name="6b42630294df40228b6557971dff6c37" class="tab" checked=""><label for="6b42630294df40228b6557971dff6c37-04a69dd16f3245f1b84171471ebc8727">General</label>
-<input type="radio" id="6b42630294df40228b6557971dff6c37-f62d1add968646e19a0af7075ca1b0f3" name="6b42630294df40228b6557971dff6c37" class="tab"><label for="6b42630294df40228b6557971dff6c37-f62d1add968646e19a0af7075ca1b0f3">Startup</label>
-<input type="radio" id="6b42630294df40228b6557971dff6c37-93f57bc7ece443468d38f635f467e684" name="6b42630294df40228b6557971dff6c37" class="tab"><label for="6b42630294df40228b6557971dff6c37-93f57bc7ece443468d38f635f467e684">Android</label>
-<input type="radio" id="6b42630294df40228b6557971dff6c37-2847cd600445463d8ca384dc4ef7a7e3" name="6b42630294df40228b6557971dff6c37" class="tab"><label for="6b42630294df40228b6557971dff6c37-2847cd600445463d8ca384dc4ef7a7e3">iOS</label>
-<input type="radio" id="6b42630294df40228b6557971dff6c37-5c395163eda048bd90f086a8d1c3d5b7" name="6b42630294df40228b6557971dff6c37" class="tab"><label for="6b42630294df40228b6557971dff6c37-5c395163eda048bd90f086a8d1c3d5b7">Windows</label>
+<input type="radio" id="0a89b950c02146eda64b4c362c4a6f7c-0a8176873c0b4e97b7e6dd6769b6c9fc" name="0a89b950c02146eda64b4c362c4a6f7c" class="tab" checked=""><label for="0a89b950c02146eda64b4c362c4a6f7c-0a8176873c0b4e97b7e6dd6769b6c9fc">General</label>
+<input type="radio" id="0a89b950c02146eda64b4c362c4a6f7c-7039877b67c44276a79ce13b7a4bd24e" name="0a89b950c02146eda64b4c362c4a6f7c" class="tab"><label for="0a89b950c02146eda64b4c362c4a6f7c-7039877b67c44276a79ce13b7a4bd24e">Startup</label>
+<input type="radio" id="0a89b950c02146eda64b4c362c4a6f7c-f72f80942f034dbe96f21c5201312eb7" name="0a89b950c02146eda64b4c362c4a6f7c" class="tab"><label for="0a89b950c02146eda64b4c362c4a6f7c-f72f80942f034dbe96f21c5201312eb7">Android</label>
+<input type="radio" id="0a89b950c02146eda64b4c362c4a6f7c-a638b8c590f2452bad5099decb1c534e" name="0a89b950c02146eda64b4c362c4a6f7c" class="tab"><label for="0a89b950c02146eda64b4c362c4a6f7c-a638b8c590f2452bad5099decb1c534e">iOS</label>
+<input type="radio" id="0a89b950c02146eda64b4c362c4a6f7c-28a3987189844c74a44aa55ec3e442c4" name="0a89b950c02146eda64b4c362c4a6f7c" class="tab"><label for="0a89b950c02146eda64b4c362c4a6f7c-28a3987189844c74a44aa55ec3e442c4">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -453,11 +453,11 @@ public override void HandleEventsForBackgroundUrl(UIApplication application, str
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="c58d5bf3f9fe418f8ff0eb23ec205307-7ab48ec672954a3f8762f6e1864cd4d2" name="c58d5bf3f9fe418f8ff0eb23ec205307" class="tab" checked=""><label for="c58d5bf3f9fe418f8ff0eb23ec205307-7ab48ec672954a3f8762f6e1864cd4d2">General</label>
-<input type="radio" id="c58d5bf3f9fe418f8ff0eb23ec205307-110634a194e04978a99f7c2a95f983b5" name="c58d5bf3f9fe418f8ff0eb23ec205307" class="tab"><label for="c58d5bf3f9fe418f8ff0eb23ec205307-110634a194e04978a99f7c2a95f983b5">Startup</label>
-<input type="radio" id="c58d5bf3f9fe418f8ff0eb23ec205307-2b78a9e49c6f489ea727b69688177158" name="c58d5bf3f9fe418f8ff0eb23ec205307" class="tab"><label for="c58d5bf3f9fe418f8ff0eb23ec205307-2b78a9e49c6f489ea727b69688177158">Android</label>
-<input type="radio" id="c58d5bf3f9fe418f8ff0eb23ec205307-642bc8803df2470fb7b9fcd10530050f" name="c58d5bf3f9fe418f8ff0eb23ec205307" class="tab"><label for="c58d5bf3f9fe418f8ff0eb23ec205307-642bc8803df2470fb7b9fcd10530050f">iOS</label>
-<input type="radio" id="c58d5bf3f9fe418f8ff0eb23ec205307-8ab3940ffcbb4e94b74e29f2692a12ae" name="c58d5bf3f9fe418f8ff0eb23ec205307" class="tab"><label for="c58d5bf3f9fe418f8ff0eb23ec205307-8ab3940ffcbb4e94b74e29f2692a12ae">Windows</label>
+<input type="radio" id="b3b6ace4e1a1430b9268b0f55beab3de-17d5cb92905c49ab96e9372e422090c4" name="b3b6ace4e1a1430b9268b0f55beab3de" class="tab" checked=""><label for="b3b6ace4e1a1430b9268b0f55beab3de-17d5cb92905c49ab96e9372e422090c4">General</label>
+<input type="radio" id="b3b6ace4e1a1430b9268b0f55beab3de-57ea35aa393c47ea9db2a945a2f990de" name="b3b6ace4e1a1430b9268b0f55beab3de" class="tab"><label for="b3b6ace4e1a1430b9268b0f55beab3de-57ea35aa393c47ea9db2a945a2f990de">Startup</label>
+<input type="radio" id="b3b6ace4e1a1430b9268b0f55beab3de-8e574d3e3fb949cd9494c26dfb07de51" name="b3b6ace4e1a1430b9268b0f55beab3de" class="tab"><label for="b3b6ace4e1a1430b9268b0f55beab3de-8e574d3e3fb949cd9494c26dfb07de51">Android</label>
+<input type="radio" id="b3b6ace4e1a1430b9268b0f55beab3de-50bb154e273340e1829e568597c0c5eb" name="b3b6ace4e1a1430b9268b0f55beab3de" class="tab"><label for="b3b6ace4e1a1430b9268b0f55beab3de-50bb154e273340e1829e568597c0c5eb">iOS</label>
+<input type="radio" id="b3b6ace4e1a1430b9268b0f55beab3de-eef7117faaeb45218f6854aa8c767ef0" name="b3b6ace4e1a1430b9268b0f55beab3de" class="tab"><label for="b3b6ace4e1a1430b9268b0f55beab3de-eef7117faaeb45218f6854aa8c767ef0">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
