--- a/jobs/getting-started.html
+++ b/jobs/getting-started.html
@@ -363,17 +363,17 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="838ff9ce4f6846e4be409eb22e46798c-5e1ebe6ccca04d10a7d9996efb9b5b0a" name="838ff9ce4f6846e4be409eb22e46798c" class="tab" checked><label for="838ff9ce4f6846e4be409eb22e46798c-5e1ebe6ccca04d10a7d9996efb9b5b0a" >General</label>
-<input type="radio" id="838ff9ce4f6846e4be409eb22e46798c-d0365afffcab4107ad5b54811eb24ed3" name="838ff9ce4f6846e4be409eb22e46798c" class="tab" ><label for="838ff9ce4f6846e4be409eb22e46798c-d0365afffcab4107ad5b54811eb24ed3" >Startup</label>
-<input type="radio" id="838ff9ce4f6846e4be409eb22e46798c-6e99913cab84443c83fbff6f84e0f41e" name="838ff9ce4f6846e4be409eb22e46798c" class="tab" ><label for="838ff9ce4f6846e4be409eb22e46798c-6e99913cab84443c83fbff6f84e0f41e" >Android</label>
-<input type="radio" id="838ff9ce4f6846e4be409eb22e46798c-97aa3a26ca20435881f78341929649cb" name="838ff9ce4f6846e4be409eb22e46798c" class="tab" ><label for="838ff9ce4f6846e4be409eb22e46798c-97aa3a26ca20435881f78341929649cb" >iOS</label>
-<input type="radio" id="838ff9ce4f6846e4be409eb22e46798c-59fa9c4985ac48e49cf3e9b64a37428b" name="838ff9ce4f6846e4be409eb22e46798c" class="tab" ><label for="838ff9ce4f6846e4be409eb22e46798c-59fa9c4985ac48e49cf3e9b64a37428b" >Windows</label>
+<input type="radio" id="ca88db60b6634f40a4d45f64637f0eda-9b754f5163f54bf983a54b0c6bbd827f" name="ca88db60b6634f40a4d45f64637f0eda" class="tab" checked><label for="ca88db60b6634f40a4d45f64637f0eda-9b754f5163f54bf983a54b0c6bbd827f" >General</label>
+<input type="radio" id="ca88db60b6634f40a4d45f64637f0eda-856fa4e021704aca9c5022cf143d5bab" name="ca88db60b6634f40a4d45f64637f0eda" class="tab" ><label for="ca88db60b6634f40a4d45f64637f0eda-856fa4e021704aca9c5022cf143d5bab" >Startup</label>
+<input type="radio" id="ca88db60b6634f40a4d45f64637f0eda-ffc293369cd94a35b989114d47fd3d6f" name="ca88db60b6634f40a4d45f64637f0eda" class="tab" ><label for="ca88db60b6634f40a4d45f64637f0eda-ffc293369cd94a35b989114d47fd3d6f" >Android</label>
+<input type="radio" id="ca88db60b6634f40a4d45f64637f0eda-e029ac8cee3a4956a7fbeb0cc27dc414" name="ca88db60b6634f40a4d45f64637f0eda" class="tab" ><label for="ca88db60b6634f40a4d45f64637f0eda-e029ac8cee3a4956a7fbeb0cc27dc414" >iOS</label>
+<input type="radio" id="ca88db60b6634f40a4d45f64637f0eda-a34a9d903c69450d94811d4d830fbf00" name="ca88db60b6634f40a4d45f64637f0eda" class="tab" ><label for="ca88db60b6634f40a4d45f64637f0eda-a34a9d903c69450d94811d4d830fbf00" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
