--- a/locations/gps.html
+++ b/locations/gps.html
@@ -363,18 +363,18 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really &quot;hammer&quot; away on your resources if you set it up wrong.</p>
 <div class="tab-wrap">
-<input type="radio" id="e8a45893e8604325901e268b22be50b6-1fea23af9634439fa09536b4baf67327" name="e8a45893e8604325901e268b22be50b6" class="tab" checked><label for="e8a45893e8604325901e268b22be50b6-1fea23af9634439fa09536b4baf67327" >General</label>
-<input type="radio" id="e8a45893e8604325901e268b22be50b6-2f0dcc4aa6284f1294606d280626185c" name="e8a45893e8604325901e268b22be50b6" class="tab" ><label for="e8a45893e8604325901e268b22be50b6-2f0dcc4aa6284f1294606d280626185c" >Startup</label>
-<input type="radio" id="e8a45893e8604325901e268b22be50b6-b27060b307dc47b8badfd351aa07b490" name="e8a45893e8604325901e268b22be50b6" class="tab" ><label for="e8a45893e8604325901e268b22be50b6-b27060b307dc47b8badfd351aa07b490" >Android</label>
-<input type="radio" id="e8a45893e8604325901e268b22be50b6-bcb1cbd511fd4d2f8208ead82c4c8341" name="e8a45893e8604325901e268b22be50b6" class="tab" ><label for="e8a45893e8604325901e268b22be50b6-bcb1cbd511fd4d2f8208ead82c4c8341" >iOS</label>
-<input type="radio" id="e8a45893e8604325901e268b22be50b6-5028d837ba034a999ee1394907767307" name="e8a45893e8604325901e268b22be50b6" class="tab" ><label for="e8a45893e8604325901e268b22be50b6-5028d837ba034a999ee1394907767307" >Windows</label>
+<input type="radio" id="3bed706321ef4561b09cc0b06ab91506-7692e8056f584a2b8c41e54ba23d018f" name="3bed706321ef4561b09cc0b06ab91506" class="tab" checked><label for="3bed706321ef4561b09cc0b06ab91506-7692e8056f584a2b8c41e54ba23d018f" >General</label>
+<input type="radio" id="3bed706321ef4561b09cc0b06ab91506-1e716d054ad34a1b86669a3dc9ada983" name="3bed706321ef4561b09cc0b06ab91506" class="tab" ><label for="3bed706321ef4561b09cc0b06ab91506-1e716d054ad34a1b86669a3dc9ada983" >Startup</label>
+<input type="radio" id="3bed706321ef4561b09cc0b06ab91506-2256bb2522bb4ca5820683f12e8341fc" name="3bed706321ef4561b09cc0b06ab91506" class="tab" ><label for="3bed706321ef4561b09cc0b06ab91506-2256bb2522bb4ca5820683f12e8341fc" >Android</label>
+<input type="radio" id="3bed706321ef4561b09cc0b06ab91506-40fafcea965e4b6e823006ada3a4b430" name="3bed706321ef4561b09cc0b06ab91506" class="tab" ><label for="3bed706321ef4561b09cc0b06ab91506-40fafcea965e4b6e823006ada3a4b430" >iOS</label>
+<input type="radio" id="3bed706321ef4561b09cc0b06ab91506-5e969d78299d4eab8b65348892aa8bd0" name="3bed706321ef4561b09cc0b06ab91506" class="tab" ><label for="3bed706321ef4561b09cc0b06ab91506-5e969d78299d4eab8b65348892aa8bd0" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
