--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -363,7 +363,7 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -378,10 +378,10 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="18984b199b2847fbb0cd96925613a659-14faa204c327479faf3f3cfed2ff6636" name="18984b199b2847fbb0cd96925613a659" class="tab" checked><label for="18984b199b2847fbb0cd96925613a659-14faa204c327479faf3f3cfed2ff6636" >General</label>
-<input type="radio" id="18984b199b2847fbb0cd96925613a659-636e17813fb141d386288188d3e337c9" name="18984b199b2847fbb0cd96925613a659" class="tab" ><label for="18984b199b2847fbb0cd96925613a659-636e17813fb141d386288188d3e337c9" >Startup</label>
-<input type="radio" id="18984b199b2847fbb0cd96925613a659-ab1f20e90cf5458e8d68fb4e2a618d03" name="18984b199b2847fbb0cd96925613a659" class="tab" ><label for="18984b199b2847fbb0cd96925613a659-ab1f20e90cf5458e8d68fb4e2a618d03" >Android</label>
-<input type="radio" id="18984b199b2847fbb0cd96925613a659-4940f0cdfd734131a31b26ac3509dc58" name="18984b199b2847fbb0cd96925613a659" class="tab" ><label for="18984b199b2847fbb0cd96925613a659-4940f0cdfd734131a31b26ac3509dc58" >iOS</label>
+<input type="radio" id="4d00c5e90bc3447cbe458baf480544d8-51ebef8a5d544b49972922dc008c998f" name="4d00c5e90bc3447cbe458baf480544d8" class="tab" checked><label for="4d00c5e90bc3447cbe458baf480544d8-51ebef8a5d544b49972922dc008c998f" >General</label>
+<input type="radio" id="4d00c5e90bc3447cbe458baf480544d8-ce7977ebe75646c391a683af594c15c7" name="4d00c5e90bc3447cbe458baf480544d8" class="tab" ><label for="4d00c5e90bc3447cbe458baf480544d8-ce7977ebe75646c391a683af594c15c7" >Startup</label>
+<input type="radio" id="4d00c5e90bc3447cbe458baf480544d8-21c5014b133a416499133566b5fd909c" name="4d00c5e90bc3447cbe458baf480544d8" class="tab" ><label for="4d00c5e90bc3447cbe458baf480544d8-21c5014b133a416499133566b5fd909c" >Android</label>
+<input type="radio" id="4d00c5e90bc3447cbe458baf480544d8-ee8fd3f091534d718fa80a760182c32d" name="4d00c5e90bc3447cbe458baf480544d8" class="tab" ><label for="4d00c5e90bc3447cbe458baf480544d8-ee8fd3f091534d718fa80a760182c32d" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
