--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -361,7 +361,7 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -370,11 +370,11 @@
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <div class="tab-wrap">
-<input type="radio" id="f42e6aa197fe487199e32c6a5431ef8e-9b4f3f05c20d445da843ba716190184f" name="f42e6aa197fe487199e32c6a5431ef8e" class="tab" checked=""><label for="f42e6aa197fe487199e32c6a5431ef8e-9b4f3f05c20d445da843ba716190184f">General</label>
-<input type="radio" id="f42e6aa197fe487199e32c6a5431ef8e-6c3b19ee4f4341b28a9f161f14a9dc56" name="f42e6aa197fe487199e32c6a5431ef8e" class="tab"><label for="f42e6aa197fe487199e32c6a5431ef8e-6c3b19ee4f4341b28a9f161f14a9dc56">Startup</label>
-<input type="radio" id="f42e6aa197fe487199e32c6a5431ef8e-e9104bd2d849455fb5a7d9315414b5c1" name="f42e6aa197fe487199e32c6a5431ef8e" class="tab"><label for="f42e6aa197fe487199e32c6a5431ef8e-e9104bd2d849455fb5a7d9315414b5c1">Android</label>
-<input type="radio" id="f42e6aa197fe487199e32c6a5431ef8e-54e2afd13a674f5d8ee4a5cbe7499c59" name="f42e6aa197fe487199e32c6a5431ef8e" class="tab"><label for="f42e6aa197fe487199e32c6a5431ef8e-54e2afd13a674f5d8ee4a5cbe7499c59">iOS</label>
-<input type="radio" id="f42e6aa197fe487199e32c6a5431ef8e-ac23594759c34312bc2af65907f52561" name="f42e6aa197fe487199e32c6a5431ef8e" class="tab"><label for="f42e6aa197fe487199e32c6a5431ef8e-ac23594759c34312bc2af65907f52561">Windows</label>
+<input type="radio" id="3c2b0b924d9748aaa9e84313da652ce3-7b7d00427c56481896e854202a5dc41c" name="3c2b0b924d9748aaa9e84313da652ce3" class="tab" checked=""><label for="3c2b0b924d9748aaa9e84313da652ce3-7b7d00427c56481896e854202a5dc41c">General</label>
+<input type="radio" id="3c2b0b924d9748aaa9e84313da652ce3-d77d1fde1065417681b2e06f0ddcdc41" name="3c2b0b924d9748aaa9e84313da652ce3" class="tab"><label for="3c2b0b924d9748aaa9e84313da652ce3-d77d1fde1065417681b2e06f0ddcdc41">Startup</label>
+<input type="radio" id="3c2b0b924d9748aaa9e84313da652ce3-66288e3c8e1b4ac19046d54201e95398" name="3c2b0b924d9748aaa9e84313da652ce3" class="tab"><label for="3c2b0b924d9748aaa9e84313da652ce3-66288e3c8e1b4ac19046d54201e95398">Android</label>
+<input type="radio" id="3c2b0b924d9748aaa9e84313da652ce3-33a6ec09e1c24a6785a87e84c0fdedaa" name="3c2b0b924d9748aaa9e84313da652ce3" class="tab"><label for="3c2b0b924d9748aaa9e84313da652ce3-33a6ec09e1c24a6785a87e84c0fdedaa">iOS</label>
+<input type="radio" id="3c2b0b924d9748aaa9e84313da652ce3-20510842f3bf42859bd0acbaef342f1b" name="3c2b0b924d9748aaa9e84313da652ce3" class="tab"><label for="3c2b0b924d9748aaa9e84313da652ce3-20510842f3bf42859bd0acbaef342f1b">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
