--- a/push/azure.html
+++ b/push/azure.html
@@ -363,17 +363,17 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="132f7fe38dc948dfafe5f5ed2e358fb5-a601889c6828429e997808dafdd31eb6" name="132f7fe38dc948dfafe5f5ed2e358fb5" class="tab" checked><label for="132f7fe38dc948dfafe5f5ed2e358fb5-a601889c6828429e997808dafdd31eb6" >General</label>
-<input type="radio" id="132f7fe38dc948dfafe5f5ed2e358fb5-e3989668a797442f8690aa27131d6ce5" name="132f7fe38dc948dfafe5f5ed2e358fb5" class="tab" ><label for="132f7fe38dc948dfafe5f5ed2e358fb5-e3989668a797442f8690aa27131d6ce5" >Startup</label>
-<input type="radio" id="132f7fe38dc948dfafe5f5ed2e358fb5-ba7d22e2408d4f1a9d805f902d062466" name="132f7fe38dc948dfafe5f5ed2e358fb5" class="tab" ><label for="132f7fe38dc948dfafe5f5ed2e358fb5-ba7d22e2408d4f1a9d805f902d062466" >Android</label>
-<input type="radio" id="132f7fe38dc948dfafe5f5ed2e358fb5-ad56b17bf0e34024bab6905812c46a30" name="132f7fe38dc948dfafe5f5ed2e358fb5" class="tab" ><label for="132f7fe38dc948dfafe5f5ed2e358fb5-ad56b17bf0e34024bab6905812c46a30" >iOS</label>
-<input type="radio" id="132f7fe38dc948dfafe5f5ed2e358fb5-88155ea08dbf4d52b92d072adc006e2b" name="132f7fe38dc948dfafe5f5ed2e358fb5" class="tab" ><label for="132f7fe38dc948dfafe5f5ed2e358fb5-88155ea08dbf4d52b92d072adc006e2b" >Windows</label>
+<input type="radio" id="9d2701be478c4de1a1d8a0ed2395015f-6890a3192ff04f439c188e9c6c1d4d87" name="9d2701be478c4de1a1d8a0ed2395015f" class="tab" checked><label for="9d2701be478c4de1a1d8a0ed2395015f-6890a3192ff04f439c188e9c6c1d4d87" >General</label>
+<input type="radio" id="9d2701be478c4de1a1d8a0ed2395015f-38e37ef832c9425fb021c2ce63196529" name="9d2701be478c4de1a1d8a0ed2395015f" class="tab" ><label for="9d2701be478c4de1a1d8a0ed2395015f-38e37ef832c9425fb021c2ce63196529" >Startup</label>
+<input type="radio" id="9d2701be478c4de1a1d8a0ed2395015f-c1e204adca8a4dbebda92e1fd6070ed1" name="9d2701be478c4de1a1d8a0ed2395015f" class="tab" ><label for="9d2701be478c4de1a1d8a0ed2395015f-c1e204adca8a4dbebda92e1fd6070ed1" >Android</label>
+<input type="radio" id="9d2701be478c4de1a1d8a0ed2395015f-114fe22b62cd47aab10d567849969a80" name="9d2701be478c4de1a1d8a0ed2395015f" class="tab" ><label for="9d2701be478c4de1a1d8a0ed2395015f-114fe22b62cd47aab10d567849969a80" >iOS</label>
+<input type="radio" id="9d2701be478c4de1a1d8a0ed2395015f-0372e09e1d7d408795d92aa41ff5e8c3" name="9d2701be478c4de1a1d8a0ed2395015f" class="tab" ><label for="9d2701be478c4de1a1d8a0ed2395015f-0372e09e1d7d408795d92aa41ff5e8c3" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
