--- a/push/firebase.html
+++ b/push/firebase.html
@@ -361,16 +361,16 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="f8b6c4faa9da4aa7b498ac2ec99c1b7f-b4bf5606409348018765b2ed65253812" name="f8b6c4faa9da4aa7b498ac2ec99c1b7f" class="tab" checked=""><label for="f8b6c4faa9da4aa7b498ac2ec99c1b7f-b4bf5606409348018765b2ed65253812">General</label>
-<input type="radio" id="f8b6c4faa9da4aa7b498ac2ec99c1b7f-f955ec140bcd49b58bc53f6c9efe5fbb" name="f8b6c4faa9da4aa7b498ac2ec99c1b7f" class="tab"><label for="f8b6c4faa9da4aa7b498ac2ec99c1b7f-f955ec140bcd49b58bc53f6c9efe5fbb">Startup</label>
-<input type="radio" id="f8b6c4faa9da4aa7b498ac2ec99c1b7f-f94d1f5a7dc64a35a7489f4abb74ea27" name="f8b6c4faa9da4aa7b498ac2ec99c1b7f" class="tab"><label for="f8b6c4faa9da4aa7b498ac2ec99c1b7f-f94d1f5a7dc64a35a7489f4abb74ea27">Android</label>
-<input type="radio" id="f8b6c4faa9da4aa7b498ac2ec99c1b7f-2eb4f59ccba04d07af62939ad68a5c75" name="f8b6c4faa9da4aa7b498ac2ec99c1b7f" class="tab"><label for="f8b6c4faa9da4aa7b498ac2ec99c1b7f-2eb4f59ccba04d07af62939ad68a5c75">iOS</label>
+<input type="radio" id="e98dfc1a39044705977d293d4243a19e-ff33f957739a4f9e9514f455e6a4f8e3" name="e98dfc1a39044705977d293d4243a19e" class="tab" checked=""><label for="e98dfc1a39044705977d293d4243a19e-ff33f957739a4f9e9514f455e6a4f8e3">General</label>
+<input type="radio" id="e98dfc1a39044705977d293d4243a19e-bd9947af9d044cf38b3f519f9ab5d91e" name="e98dfc1a39044705977d293d4243a19e" class="tab"><label for="e98dfc1a39044705977d293d4243a19e-bd9947af9d044cf38b3f519f9ab5d91e">Startup</label>
+<input type="radio" id="e98dfc1a39044705977d293d4243a19e-0104d1160c5b4017b4e511581d3787e4" name="e98dfc1a39044705977d293d4243a19e" class="tab"><label for="e98dfc1a39044705977d293d4243a19e-0104d1160c5b4017b4e511581d3787e4">Android</label>
+<input type="radio" id="e98dfc1a39044705977d293d4243a19e-c84ccb6c93984f37b4b0d721ba427f86" name="e98dfc1a39044705977d293d4243a19e" class="tab"><label for="e98dfc1a39044705977d293d4243a19e-c84ccb6c93984f37b4b0d721ba427f86">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
