--- a/push/onesignal.html
+++ b/push/onesignal.html
@@ -363,16 +363,16 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="7e249eac933a4588a0eb0514823c2508-23b59a548182459bb0b94ffe51176297" name="7e249eac933a4588a0eb0514823c2508" class="tab" checked><label for="7e249eac933a4588a0eb0514823c2508-23b59a548182459bb0b94ffe51176297" >General</label>
-<input type="radio" id="7e249eac933a4588a0eb0514823c2508-1b76cf83f47a463493f232592cc092a0" name="7e249eac933a4588a0eb0514823c2508" class="tab" ><label for="7e249eac933a4588a0eb0514823c2508-1b76cf83f47a463493f232592cc092a0" >Startup</label>
-<input type="radio" id="7e249eac933a4588a0eb0514823c2508-513f9b6424f941cba7bd54d06eaecf88" name="7e249eac933a4588a0eb0514823c2508" class="tab" ><label for="7e249eac933a4588a0eb0514823c2508-513f9b6424f941cba7bd54d06eaecf88" >Android</label>
-<input type="radio" id="7e249eac933a4588a0eb0514823c2508-b7ba1f4e933b48489d832e02f8db8f7b" name="7e249eac933a4588a0eb0514823c2508" class="tab" ><label for="7e249eac933a4588a0eb0514823c2508-b7ba1f4e933b48489d832e02f8db8f7b" >iOS</label>
+<input type="radio" id="eb24285b1496449d97664ca3951f6d25-b3c513736fd5488d8a2ac3fbf7827b3d" name="eb24285b1496449d97664ca3951f6d25" class="tab" checked><label for="eb24285b1496449d97664ca3951f6d25-b3c513736fd5488d8a2ac3fbf7827b3d" >General</label>
+<input type="radio" id="eb24285b1496449d97664ca3951f6d25-560ab119c53540bd934eaf7c555154a7" name="eb24285b1496449d97664ca3951f6d25" class="tab" ><label for="eb24285b1496449d97664ca3951f6d25-560ab119c53540bd934eaf7c555154a7" >Startup</label>
+<input type="radio" id="eb24285b1496449d97664ca3951f6d25-0cf37d6d41104b088888e68420022af7" name="eb24285b1496449d97664ca3951f6d25" class="tab" ><label for="eb24285b1496449d97664ca3951f6d25-0cf37d6d41104b088888e68420022af7" >Android</label>
+<input type="radio" id="eb24285b1496449d97664ca3951f6d25-6cbb38d2a85e452ebd897ed5bbec1dda" name="eb24285b1496449d97664ca3951f6d25" class="tab" ><label for="eb24285b1496449d97664ca3951f6d25-6cbb38d2a85e452ebd897ed5bbec1dda" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
