--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -363,17 +363,17 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="3462a127d94547a6b38722f6c04f86e7-45ad2c3891674eb7b43c2b11d5e605ad" name="3462a127d94547a6b38722f6c04f86e7" class="tab" checked><label for="3462a127d94547a6b38722f6c04f86e7-45ad2c3891674eb7b43c2b11d5e605ad" >General</label>
-<input type="radio" id="3462a127d94547a6b38722f6c04f86e7-190ba586dfc847fe97a85c5a020fd3b5" name="3462a127d94547a6b38722f6c04f86e7" class="tab" ><label for="3462a127d94547a6b38722f6c04f86e7-190ba586dfc847fe97a85c5a020fd3b5" >Startup</label>
-<input type="radio" id="3462a127d94547a6b38722f6c04f86e7-45fc00d83cf84c30a006ff5af1bc2bcc" name="3462a127d94547a6b38722f6c04f86e7" class="tab" ><label for="3462a127d94547a6b38722f6c04f86e7-45fc00d83cf84c30a006ff5af1bc2bcc" >Android</label>
-<input type="radio" id="3462a127d94547a6b38722f6c04f86e7-5da060445ae94410988bceea387db827" name="3462a127d94547a6b38722f6c04f86e7" class="tab" ><label for="3462a127d94547a6b38722f6c04f86e7-5da060445ae94410988bceea387db827" >iOS</label>
-<input type="radio" id="3462a127d94547a6b38722f6c04f86e7-02e8992f94e34d4a8e7241dd26ce0cbd" name="3462a127d94547a6b38722f6c04f86e7" class="tab" ><label for="3462a127d94547a6b38722f6c04f86e7-02e8992f94e34d4a8e7241dd26ce0cbd" >Windows</label>
+<input type="radio" id="1b783509ee074a7bac04f6b794a37dc6-f446c4c3213b464db7c5fee4d3ca8857" name="1b783509ee074a7bac04f6b794a37dc6" class="tab" checked><label for="1b783509ee074a7bac04f6b794a37dc6-f446c4c3213b464db7c5fee4d3ca8857" >General</label>
+<input type="radio" id="1b783509ee074a7bac04f6b794a37dc6-c72f95c6f4964a488280d9f73460e0e5" name="1b783509ee074a7bac04f6b794a37dc6" class="tab" ><label for="1b783509ee074a7bac04f6b794a37dc6-c72f95c6f4964a488280d9f73460e0e5" >Startup</label>
+<input type="radio" id="1b783509ee074a7bac04f6b794a37dc6-045fee2010a4449cad9645f759dffed3" name="1b783509ee074a7bac04f6b794a37dc6" class="tab" ><label for="1b783509ee074a7bac04f6b794a37dc6-045fee2010a4449cad9645f759dffed3" >Android</label>
+<input type="radio" id="1b783509ee074a7bac04f6b794a37dc6-9d8574ac19af4bd9af3fa1e4f70142ee" name="1b783509ee074a7bac04f6b794a37dc6" class="tab" ><label for="1b783509ee074a7bac04f6b794a37dc6-9d8574ac19af4bd9af3fa1e4f70142ee" >iOS</label>
+<input type="radio" id="1b783509ee074a7bac04f6b794a37dc6-45602d12766942ac92697cb09b2c5a3c" name="1b783509ee074a7bac04f6b794a37dc6" class="tab" ><label for="1b783509ee074a7bac04f6b794a37dc6-45602d12766942ac92697cb09b2c5a3c" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
