--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -363,16 +363,16 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="c4f357fc26004838ac68bf8d03bb148c-f7c1ddebbdd245ca8f9f607f6154ccaf" name="c4f357fc26004838ac68bf8d03bb148c" class="tab" checked><label for="c4f357fc26004838ac68bf8d03bb148c-f7c1ddebbdd245ca8f9f607f6154ccaf" >General</label>
-<input type="radio" id="c4f357fc26004838ac68bf8d03bb148c-0d1898b07242487aafc684ebc21d2b4a" name="c4f357fc26004838ac68bf8d03bb148c" class="tab" ><label for="c4f357fc26004838ac68bf8d03bb148c-0d1898b07242487aafc684ebc21d2b4a" >Startup</label>
-<input type="radio" id="c4f357fc26004838ac68bf8d03bb148c-c8685689924c4620bd5ac261ee56d10c" name="c4f357fc26004838ac68bf8d03bb148c" class="tab" ><label for="c4f357fc26004838ac68bf8d03bb148c-c8685689924c4620bd5ac261ee56d10c" >Android</label>
-<input type="radio" id="c4f357fc26004838ac68bf8d03bb148c-d25628a695314be5934d4e8a2b4c06be" name="c4f357fc26004838ac68bf8d03bb148c" class="tab" ><label for="c4f357fc26004838ac68bf8d03bb148c-d25628a695314be5934d4e8a2b4c06be" >Windows</label>
+<input type="radio" id="34949dd5894d46de9d16fa41dffa9b3e-529a508a454d4b709e55b6891beada31" name="34949dd5894d46de9d16fa41dffa9b3e" class="tab" checked><label for="34949dd5894d46de9d16fa41dffa9b3e-529a508a454d4b709e55b6891beada31" >General</label>
+<input type="radio" id="34949dd5894d46de9d16fa41dffa9b3e-a34a8436e7cc4a1299d7a100c0c9439f" name="34949dd5894d46de9d16fa41dffa9b3e" class="tab" ><label for="34949dd5894d46de9d16fa41dffa9b3e-a34a8436e7cc4a1299d7a100c0c9439f" >Startup</label>
+<input type="radio" id="34949dd5894d46de9d16fa41dffa9b3e-8ec1dd430f324e8b96868dd887371a9d" name="34949dd5894d46de9d16fa41dffa9b3e" class="tab" ><label for="34949dd5894d46de9d16fa41dffa9b3e-8ec1dd430f324e8b96868dd887371a9d" >Android</label>
+<input type="radio" id="34949dd5894d46de9d16fa41dffa9b3e-74563133e3d545b9b4627f3d9c701289" name="34949dd5894d46de9d16fa41dffa9b3e" class="tab" ><label for="34949dd5894d46de9d16fa41dffa9b3e-74563133e3d545b9b4627f3d9c701289" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
