--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -363,17 +363,17 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="5273dae6306a43e2a9813bd19486bf19-5b73e839381e4d4c89be5914adb8f66b" name="5273dae6306a43e2a9813bd19486bf19" class="tab" checked><label for="5273dae6306a43e2a9813bd19486bf19-5b73e839381e4d4c89be5914adb8f66b" >General</label>
-<input type="radio" id="5273dae6306a43e2a9813bd19486bf19-0c5b67597dcf4cfa8e6e71ebd45e2baf" name="5273dae6306a43e2a9813bd19486bf19" class="tab" ><label for="5273dae6306a43e2a9813bd19486bf19-0c5b67597dcf4cfa8e6e71ebd45e2baf" >Startup</label>
-<input type="radio" id="5273dae6306a43e2a9813bd19486bf19-5de0ef28aa284f428a54c135c283144f" name="5273dae6306a43e2a9813bd19486bf19" class="tab" ><label for="5273dae6306a43e2a9813bd19486bf19-5de0ef28aa284f428a54c135c283144f" >Android</label>
-<input type="radio" id="5273dae6306a43e2a9813bd19486bf19-297ac2025c4d40c39b31fd99caabdc3d" name="5273dae6306a43e2a9813bd19486bf19" class="tab" ><label for="5273dae6306a43e2a9813bd19486bf19-297ac2025c4d40c39b31fd99caabdc3d" >iOS</label>
-<input type="radio" id="5273dae6306a43e2a9813bd19486bf19-8b93cc8e15604c8c8d71b1e7a7da657e" name="5273dae6306a43e2a9813bd19486bf19" class="tab" ><label for="5273dae6306a43e2a9813bd19486bf19-8b93cc8e15604c8c8d71b1e7a7da657e" >Windows</label>
+<input type="radio" id="b8a8b3eaaef845cf8506cc79638a7c47-83722f3012804208b44498852c7d520b" name="b8a8b3eaaef845cf8506cc79638a7c47" class="tab" checked><label for="b8a8b3eaaef845cf8506cc79638a7c47-83722f3012804208b44498852c7d520b" >General</label>
+<input type="radio" id="b8a8b3eaaef845cf8506cc79638a7c47-b6d88ad5907541de90f4809dca506935" name="b8a8b3eaaef845cf8506cc79638a7c47" class="tab" ><label for="b8a8b3eaaef845cf8506cc79638a7c47-b6d88ad5907541de90f4809dca506935" >Startup</label>
+<input type="radio" id="b8a8b3eaaef845cf8506cc79638a7c47-3d0f943ecb9e4b1da5f250d65fa40ae1" name="b8a8b3eaaef845cf8506cc79638a7c47" class="tab" ><label for="b8a8b3eaaef845cf8506cc79638a7c47-3d0f943ecb9e4b1da5f250d65fa40ae1" >Android</label>
+<input type="radio" id="b8a8b3eaaef845cf8506cc79638a7c47-99f778ddb253487aade6e228e071a562" name="b8a8b3eaaef845cf8506cc79638a7c47" class="tab" ><label for="b8a8b3eaaef845cf8506cc79638a7c47-99f778ddb253487aade6e228e071a562" >iOS</label>
+<input type="radio" id="b8a8b3eaaef845cf8506cc79638a7c47-f56e5452e583402288033d5f3fe10911" name="b8a8b3eaaef845cf8506cc79638a7c47" class="tab" ><label for="b8a8b3eaaef845cf8506cc79638a7c47-f56e5452e583402288033d5f3fe10911" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
