--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -363,17 +363,17 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="5a7725f6ab764ad2816124a3793edef4-a100310d02f84fe09b970668e1753837" name="5a7725f6ab764ad2816124a3793edef4" class="tab" checked><label for="5a7725f6ab764ad2816124a3793edef4-a100310d02f84fe09b970668e1753837" >General</label>
-<input type="radio" id="5a7725f6ab764ad2816124a3793edef4-6925ed126a4f423485a0a4b4e0458050" name="5a7725f6ab764ad2816124a3793edef4" class="tab" ><label for="5a7725f6ab764ad2816124a3793edef4-6925ed126a4f423485a0a4b4e0458050" >Startup</label>
-<input type="radio" id="5a7725f6ab764ad2816124a3793edef4-0846a1d3d65c4a20bb94c98c59916f1f" name="5a7725f6ab764ad2816124a3793edef4" class="tab" ><label for="5a7725f6ab764ad2816124a3793edef4-0846a1d3d65c4a20bb94c98c59916f1f" >Android</label>
-<input type="radio" id="5a7725f6ab764ad2816124a3793edef4-5eeac7bfc24e4b09bba1d01f6da4a521" name="5a7725f6ab764ad2816124a3793edef4" class="tab" ><label for="5a7725f6ab764ad2816124a3793edef4-5eeac7bfc24e4b09bba1d01f6da4a521" >iOS</label>
-<input type="radio" id="5a7725f6ab764ad2816124a3793edef4-ad80181b8df04bf882acbedf6687e775" name="5a7725f6ab764ad2816124a3793edef4" class="tab" ><label for="5a7725f6ab764ad2816124a3793edef4-ad80181b8df04bf882acbedf6687e775" >Windows</label>
+<input type="radio" id="a83400e21c664218808c8ea6b474cdfa-b4af1cb104d5477583bcaf2068b1bf49" name="a83400e21c664218808c8ea6b474cdfa" class="tab" checked><label for="a83400e21c664218808c8ea6b474cdfa-b4af1cb104d5477583bcaf2068b1bf49" >General</label>
+<input type="radio" id="a83400e21c664218808c8ea6b474cdfa-e652de41dc4f454fa773d9e2d7d3d341" name="a83400e21c664218808c8ea6b474cdfa" class="tab" ><label for="a83400e21c664218808c8ea6b474cdfa-e652de41dc4f454fa773d9e2d7d3d341" >Startup</label>
+<input type="radio" id="a83400e21c664218808c8ea6b474cdfa-48dc82e31a694f00b9f6207af769a515" name="a83400e21c664218808c8ea6b474cdfa" class="tab" ><label for="a83400e21c664218808c8ea6b474cdfa-48dc82e31a694f00b9f6207af769a515" >Android</label>
+<input type="radio" id="a83400e21c664218808c8ea6b474cdfa-3236e322a2d847a9b786237d70a69880" name="a83400e21c664218808c8ea6b474cdfa" class="tab" ><label for="a83400e21c664218808c8ea6b474cdfa-3236e322a2d847a9b786237d70a69880" >iOS</label>
+<input type="radio" id="a83400e21c664218808c8ea6b474cdfa-26898d6a28f44fecac279400e918f200" name="a83400e21c664218808c8ea6b474cdfa" class="tab" ><label for="a83400e21c664218808c8ea6b474cdfa-26898d6a28f44fecac279400e918f200" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
