--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -363,17 +363,17 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="0f111ec2e6fd4534b8d5665f270fecc5-808461eab804472d91ec8d72aee41a24" name="0f111ec2e6fd4534b8d5665f270fecc5" class="tab" checked><label for="0f111ec2e6fd4534b8d5665f270fecc5-808461eab804472d91ec8d72aee41a24" >General</label>
-<input type="radio" id="0f111ec2e6fd4534b8d5665f270fecc5-0f44ac9325934263bd13bf78469398e5" name="0f111ec2e6fd4534b8d5665f270fecc5" class="tab" ><label for="0f111ec2e6fd4534b8d5665f270fecc5-0f44ac9325934263bd13bf78469398e5" >Startup</label>
-<input type="radio" id="0f111ec2e6fd4534b8d5665f270fecc5-57a5a8471ead44fb808dc0ff6c9a941e" name="0f111ec2e6fd4534b8d5665f270fecc5" class="tab" ><label for="0f111ec2e6fd4534b8d5665f270fecc5-57a5a8471ead44fb808dc0ff6c9a941e" >Android</label>
-<input type="radio" id="0f111ec2e6fd4534b8d5665f270fecc5-99d1f45bae1a4f3c895ecb003c31d274" name="0f111ec2e6fd4534b8d5665f270fecc5" class="tab" ><label for="0f111ec2e6fd4534b8d5665f270fecc5-99d1f45bae1a4f3c895ecb003c31d274" >iOS</label>
-<input type="radio" id="0f111ec2e6fd4534b8d5665f270fecc5-673b3691e9fd44c4a1922da72cffc7b6" name="0f111ec2e6fd4534b8d5665f270fecc5" class="tab" ><label for="0f111ec2e6fd4534b8d5665f270fecc5-673b3691e9fd44c4a1922da72cffc7b6" >Windows</label>
+<input type="radio" id="9ddeff48ad3a4256ba8cbd8be009978d-af6574815d7743d88e94bc3257c86d5d" name="9ddeff48ad3a4256ba8cbd8be009978d" class="tab" checked><label for="9ddeff48ad3a4256ba8cbd8be009978d-af6574815d7743d88e94bc3257c86d5d" >General</label>
+<input type="radio" id="9ddeff48ad3a4256ba8cbd8be009978d-bb9e354e5e994c22a88b73cd2717246a" name="9ddeff48ad3a4256ba8cbd8be009978d" class="tab" ><label for="9ddeff48ad3a4256ba8cbd8be009978d-bb9e354e5e994c22a88b73cd2717246a" >Startup</label>
+<input type="radio" id="9ddeff48ad3a4256ba8cbd8be009978d-64a03f1f35954600b2fab86e0b5789f2" name="9ddeff48ad3a4256ba8cbd8be009978d" class="tab" ><label for="9ddeff48ad3a4256ba8cbd8be009978d-64a03f1f35954600b2fab86e0b5789f2" >Android</label>
+<input type="radio" id="9ddeff48ad3a4256ba8cbd8be009978d-d7498f9844c24f2b84e075918317130c" name="9ddeff48ad3a4256ba8cbd8be009978d" class="tab" ><label for="9ddeff48ad3a4256ba8cbd8be009978d-d7498f9844c24f2b84e075918317130c" >iOS</label>
+<input type="radio" id="9ddeff48ad3a4256ba8cbd8be009978d-6149ee82ca6945708e4d1455d553adad" name="9ddeff48ad3a4256ba8cbd8be009978d" class="tab" ><label for="9ddeff48ad3a4256ba8cbd8be009978d-6149ee82ca6945708e4d1455d553adad" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
