--- a/sensors/humidity.html
+++ b/sensors/humidity.html
@@ -363,15 +363,15 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="ec513546585447b199584c2dad1e2a8b-6c988d7a87e0436bb1c707e43193ad20" name="ec513546585447b199584c2dad1e2a8b" class="tab" checked><label for="ec513546585447b199584c2dad1e2a8b-6c988d7a87e0436bb1c707e43193ad20" >General</label>
-<input type="radio" id="ec513546585447b199584c2dad1e2a8b-8e629930111b43f79836bccb938a4245" name="ec513546585447b199584c2dad1e2a8b" class="tab" ><label for="ec513546585447b199584c2dad1e2a8b-8e629930111b43f79836bccb938a4245" >Startup</label>
-<input type="radio" id="ec513546585447b199584c2dad1e2a8b-33da24b566104997b9deee6e8c58af2b" name="ec513546585447b199584c2dad1e2a8b" class="tab" ><label for="ec513546585447b199584c2dad1e2a8b-33da24b566104997b9deee6e8c58af2b" >Android</label>
+<input type="radio" id="f5ae50796d684bf09bcc4090a27cd765-dc83968b245a4084bcd9dedee250ef09" name="f5ae50796d684bf09bcc4090a27cd765" class="tab" checked><label for="f5ae50796d684bf09bcc4090a27cd765-dc83968b245a4084bcd9dedee250ef09" >General</label>
+<input type="radio" id="f5ae50796d684bf09bcc4090a27cd765-1a623b91d88e46588b59fabe68e7946e" name="f5ae50796d684bf09bcc4090a27cd765" class="tab" ><label for="f5ae50796d684bf09bcc4090a27cd765-1a623b91d88e46588b59fabe68e7946e" >Startup</label>
+<input type="radio" id="f5ae50796d684bf09bcc4090a27cd765-e8c8194f584a45b88fe6c33066fa5124" name="f5ae50796d684bf09bcc4090a27cd765" class="tab" ><label for="f5ae50796d684bf09bcc4090a27cd765-e8c8194f584a45b88fe6c33066fa5124" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
