--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -363,17 +363,17 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="8e28e6e8cfde4f3e96628e0b65bdbe01-f68d4b21b0524004922deff57220d927" name="8e28e6e8cfde4f3e96628e0b65bdbe01" class="tab" checked><label for="8e28e6e8cfde4f3e96628e0b65bdbe01-f68d4b21b0524004922deff57220d927" >General</label>
-<input type="radio" id="8e28e6e8cfde4f3e96628e0b65bdbe01-3fe84be2f59b4eb7b218bca3e9ecb698" name="8e28e6e8cfde4f3e96628e0b65bdbe01" class="tab" ><label for="8e28e6e8cfde4f3e96628e0b65bdbe01-3fe84be2f59b4eb7b218bca3e9ecb698" >Startup</label>
-<input type="radio" id="8e28e6e8cfde4f3e96628e0b65bdbe01-3413efb851384430b75b65c27bef3d13" name="8e28e6e8cfde4f3e96628e0b65bdbe01" class="tab" ><label for="8e28e6e8cfde4f3e96628e0b65bdbe01-3413efb851384430b75b65c27bef3d13" >Android</label>
-<input type="radio" id="8e28e6e8cfde4f3e96628e0b65bdbe01-9019f0951d734852bdbd4ecb51e9e816" name="8e28e6e8cfde4f3e96628e0b65bdbe01" class="tab" ><label for="8e28e6e8cfde4f3e96628e0b65bdbe01-9019f0951d734852bdbd4ecb51e9e816" >iOS</label>
-<input type="radio" id="8e28e6e8cfde4f3e96628e0b65bdbe01-ec7fd9c7169b484bb77b91f59f13ce61" name="8e28e6e8cfde4f3e96628e0b65bdbe01" class="tab" ><label for="8e28e6e8cfde4f3e96628e0b65bdbe01-ec7fd9c7169b484bb77b91f59f13ce61" >Windows</label>
+<input type="radio" id="179d54dc00ea49d99b6f902a3befed36-61ca6bfc4f534a58b90647135248f4cd" name="179d54dc00ea49d99b6f902a3befed36" class="tab" checked><label for="179d54dc00ea49d99b6f902a3befed36-61ca6bfc4f534a58b90647135248f4cd" >General</label>
+<input type="radio" id="179d54dc00ea49d99b6f902a3befed36-ae510d27aac54e478593327c5011e9c4" name="179d54dc00ea49d99b6f902a3befed36" class="tab" ><label for="179d54dc00ea49d99b6f902a3befed36-ae510d27aac54e478593327c5011e9c4" >Startup</label>
+<input type="radio" id="179d54dc00ea49d99b6f902a3befed36-01fc5218957d41049fd28d767dffd28e" name="179d54dc00ea49d99b6f902a3befed36" class="tab" ><label for="179d54dc00ea49d99b6f902a3befed36-01fc5218957d41049fd28d767dffd28e" >Android</label>
+<input type="radio" id="179d54dc00ea49d99b6f902a3befed36-cb1ed0539cea4100ad7f60862754311e" name="179d54dc00ea49d99b6f902a3befed36" class="tab" ><label for="179d54dc00ea49d99b6f902a3befed36-cb1ed0539cea4100ad7f60862754311e" >iOS</label>
+<input type="radio" id="179d54dc00ea49d99b6f902a3befed36-5a27e95e5e964fe49d7ee82a1037d5d2" name="179d54dc00ea49d99b6f902a3befed36" class="tab" ><label for="179d54dc00ea49d99b6f902a3befed36-5a27e95e5e964fe49d7ee82a1037d5d2" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
