--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -363,17 +363,17 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="952fe91b20dd4068a415772360f49b6e-46687914eb374069a746028a6bff8b14" name="952fe91b20dd4068a415772360f49b6e" class="tab" checked><label for="952fe91b20dd4068a415772360f49b6e-46687914eb374069a746028a6bff8b14" >General</label>
-<input type="radio" id="952fe91b20dd4068a415772360f49b6e-b238390ea6a64f3ab2912b048027b69d" name="952fe91b20dd4068a415772360f49b6e" class="tab" ><label for="952fe91b20dd4068a415772360f49b6e-b238390ea6a64f3ab2912b048027b69d" >Startup</label>
-<input type="radio" id="952fe91b20dd4068a415772360f49b6e-5b738c05132645c499b3b8ed2b82c54f" name="952fe91b20dd4068a415772360f49b6e" class="tab" ><label for="952fe91b20dd4068a415772360f49b6e-5b738c05132645c499b3b8ed2b82c54f" >Android</label>
-<input type="radio" id="952fe91b20dd4068a415772360f49b6e-585d5bf842cd42b2bc90e98e9b46b07f" name="952fe91b20dd4068a415772360f49b6e" class="tab" ><label for="952fe91b20dd4068a415772360f49b6e-585d5bf842cd42b2bc90e98e9b46b07f" >iOS</label>
-<input type="radio" id="952fe91b20dd4068a415772360f49b6e-899c3ee2bccd437ca9565e9884fe598a" name="952fe91b20dd4068a415772360f49b6e" class="tab" ><label for="952fe91b20dd4068a415772360f49b6e-899c3ee2bccd437ca9565e9884fe598a" >Windows</label>
+<input type="radio" id="0df3517d90dd4dd19ce9076a5b0aa3f9-6080b6e43ecc4dafb03ac88b43419228" name="0df3517d90dd4dd19ce9076a5b0aa3f9" class="tab" checked><label for="0df3517d90dd4dd19ce9076a5b0aa3f9-6080b6e43ecc4dafb03ac88b43419228" >General</label>
+<input type="radio" id="0df3517d90dd4dd19ce9076a5b0aa3f9-06e63ff8076c49588409a6b95d8cb975" name="0df3517d90dd4dd19ce9076a5b0aa3f9" class="tab" ><label for="0df3517d90dd4dd19ce9076a5b0aa3f9-06e63ff8076c49588409a6b95d8cb975" >Startup</label>
+<input type="radio" id="0df3517d90dd4dd19ce9076a5b0aa3f9-02b1058e82bb40d9b823405c72267a08" name="0df3517d90dd4dd19ce9076a5b0aa3f9" class="tab" ><label for="0df3517d90dd4dd19ce9076a5b0aa3f9-02b1058e82bb40d9b823405c72267a08" >Android</label>
+<input type="radio" id="0df3517d90dd4dd19ce9076a5b0aa3f9-0bf5352c5806404aa70df44342fbd137" name="0df3517d90dd4dd19ce9076a5b0aa3f9" class="tab" ><label for="0df3517d90dd4dd19ce9076a5b0aa3f9-0bf5352c5806404aa70df44342fbd137" >iOS</label>
+<input type="radio" id="0df3517d90dd4dd19ce9076a5b0aa3f9-0f52b28bf77e41de9c4fe3344fb64d99" name="0df3517d90dd4dd19ce9076a5b0aa3f9" class="tab" ><label for="0df3517d90dd4dd19ce9076a5b0aa3f9-0f52b28bf77e41de9c4fe3344fb64d99" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
