--- a/sensors/proximity.html
+++ b/sensors/proximity.html
@@ -363,16 +363,16 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="ffc44e0bebc14606947a322b4682ebe4-40b1cb5e5e904e76a29a39dd0831551b" name="ffc44e0bebc14606947a322b4682ebe4" class="tab" checked><label for="ffc44e0bebc14606947a322b4682ebe4-40b1cb5e5e904e76a29a39dd0831551b" >General</label>
-<input type="radio" id="ffc44e0bebc14606947a322b4682ebe4-c646e96c97dc4d69b758229c4fea799c" name="ffc44e0bebc14606947a322b4682ebe4" class="tab" ><label for="ffc44e0bebc14606947a322b4682ebe4-c646e96c97dc4d69b758229c4fea799c" >Startup</label>
-<input type="radio" id="ffc44e0bebc14606947a322b4682ebe4-edab7206ef174710b74bb4e4d3bc68a9" name="ffc44e0bebc14606947a322b4682ebe4" class="tab" ><label for="ffc44e0bebc14606947a322b4682ebe4-edab7206ef174710b74bb4e4d3bc68a9" >Android</label>
-<input type="radio" id="ffc44e0bebc14606947a322b4682ebe4-8ea3deb658f94c13b463b548d52471bc" name="ffc44e0bebc14606947a322b4682ebe4" class="tab" ><label for="ffc44e0bebc14606947a322b4682ebe4-8ea3deb658f94c13b463b548d52471bc" >iOS</label>
+<input type="radio" id="728fcba365a047018f8eb79836c5ae64-8191517ca0ba446e91c8621b9a62e000" name="728fcba365a047018f8eb79836c5ae64" class="tab" checked><label for="728fcba365a047018f8eb79836c5ae64-8191517ca0ba446e91c8621b9a62e000" >General</label>
+<input type="radio" id="728fcba365a047018f8eb79836c5ae64-fa3a688e389343adab19f6c869c81ff3" name="728fcba365a047018f8eb79836c5ae64" class="tab" ><label for="728fcba365a047018f8eb79836c5ae64-fa3a688e389343adab19f6c869c81ff3" >Startup</label>
+<input type="radio" id="728fcba365a047018f8eb79836c5ae64-c5d95e683d9e4e21964c25724f5b17af" name="728fcba365a047018f8eb79836c5ae64" class="tab" ><label for="728fcba365a047018f8eb79836c5ae64-c5d95e683d9e4e21964c25724f5b17af" >Android</label>
+<input type="radio" id="728fcba365a047018f8eb79836c5ae64-072351f5c1dc4236a98aee2586e03254" name="728fcba365a047018f8eb79836c5ae64" class="tab" ><label for="728fcba365a047018f8eb79836c5ae64-072351f5c1dc4236a98aee2586e03254" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
