--- a/sensors/temperature.html
+++ b/sensors/temperature.html
@@ -363,15 +363,15 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="943768612ab046c2bb4e9949c6242cf5-289117e321ff4c80baca51ad246af529" name="943768612ab046c2bb4e9949c6242cf5" class="tab" checked><label for="943768612ab046c2bb4e9949c6242cf5-289117e321ff4c80baca51ad246af529" >General</label>
-<input type="radio" id="943768612ab046c2bb4e9949c6242cf5-d0fc1fdbcb6d49e5ab621ca3ad242124" name="943768612ab046c2bb4e9949c6242cf5" class="tab" ><label for="943768612ab046c2bb4e9949c6242cf5-d0fc1fdbcb6d49e5ab621ca3ad242124" >Startup</label>
-<input type="radio" id="943768612ab046c2bb4e9949c6242cf5-da5b84a2056443c399cf10c236e48713" name="943768612ab046c2bb4e9949c6242cf5" class="tab" ><label for="943768612ab046c2bb4e9949c6242cf5-da5b84a2056443c399cf10c236e48713" >Android</label>
+<input type="radio" id="88d588d7de4546449a728e8f189ea39b-d22b58d124dc4b809cf45290a93909f3" name="88d588d7de4546449a728e8f189ea39b" class="tab" checked><label for="88d588d7de4546449a728e8f189ea39b-d22b58d124dc4b809cf45290a93909f3" >General</label>
+<input type="radio" id="88d588d7de4546449a728e8f189ea39b-c5dbc9f5736e4ea8b40e6d69ef90063a" name="88d588d7de4546449a728e8f189ea39b" class="tab" ><label for="88d588d7de4546449a728e8f189ea39b-c5dbc9f5736e4ea8b40e6d69ef90063a" >Startup</label>
+<input type="radio" id="88d588d7de4546449a728e8f189ea39b-625f2cd5bcc848618c57564409577da1" name="88d588d7de4546449a728e8f189ea39b" class="tab" ><label for="88d588d7de4546449a728e8f189ea39b-625f2cd5bcc848618c57564409577da1" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
