--- a/setup/uwp.html
+++ b/setup/uwp.html
@@ -363,7 +363,7 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -375,11 +375,11 @@
 <img src="images/uwp_runtime_proj.png" width="550" />
 <ol start="2">
 <li>Add <div class="tab-wrap">
-<input type="radio" id="3b8a9aac27ed4a7ead542bea52860c5b-1e2ce348f55c4de5a5185671a3e3dc62" name="3b8a9aac27ed4a7ead542bea52860c5b" class="tab" checked><label for="3b8a9aac27ed4a7ead542bea52860c5b-1e2ce348f55c4de5a5185671a3e3dc62" >General</label>
-<input type="radio" id="3b8a9aac27ed4a7ead542bea52860c5b-236a422e741c4a08ac6899074d5b5d71" name="3b8a9aac27ed4a7ead542bea52860c5b" class="tab" ><label for="3b8a9aac27ed4a7ead542bea52860c5b-236a422e741c4a08ac6899074d5b5d71" >Startup</label>
-<input type="radio" id="3b8a9aac27ed4a7ead542bea52860c5b-7d31e5009e3048e886c17276f16137a6" name="3b8a9aac27ed4a7ead542bea52860c5b" class="tab" ><label for="3b8a9aac27ed4a7ead542bea52860c5b-7d31e5009e3048e886c17276f16137a6" >Android</label>
-<input type="radio" id="3b8a9aac27ed4a7ead542bea52860c5b-90aec3d57c4c44c484a3ca91f1f6fd59" name="3b8a9aac27ed4a7ead542bea52860c5b" class="tab" ><label for="3b8a9aac27ed4a7ead542bea52860c5b-90aec3d57c4c44c484a3ca91f1f6fd59" >iOS</label>
-<input type="radio" id="3b8a9aac27ed4a7ead542bea52860c5b-500e1bbc09d5403a96bb38fb733954ad" name="3b8a9aac27ed4a7ead542bea52860c5b" class="tab" ><label for="3b8a9aac27ed4a7ead542bea52860c5b-500e1bbc09d5403a96bb38fb733954ad" >Windows</label></li>
+<input type="radio" id="7e6acb584e85423cbdb5b56c55ed3658-fcd06aa60fd6400e9d7ce41f5bb77789" name="7e6acb584e85423cbdb5b56c55ed3658" class="tab" checked><label for="7e6acb584e85423cbdb5b56c55ed3658-fcd06aa60fd6400e9d7ce41f5bb77789" >General</label>
+<input type="radio" id="7e6acb584e85423cbdb5b56c55ed3658-423887e5436f4c09bcc547361c63f06c" name="7e6acb584e85423cbdb5b56c55ed3658" class="tab" ><label for="7e6acb584e85423cbdb5b56c55ed3658-423887e5436f4c09bcc547361c63f06c" >Startup</label>
+<input type="radio" id="7e6acb584e85423cbdb5b56c55ed3658-4478fe3add194668bc3af8e2909d9355" name="7e6acb584e85423cbdb5b56c55ed3658" class="tab" ><label for="7e6acb584e85423cbdb5b56c55ed3658-4478fe3add194668bc3af8e2909d9355" >Android</label>
+<input type="radio" id="7e6acb584e85423cbdb5b56c55ed3658-80ef399b97ee4e55af1787b73b397b6e" name="7e6acb584e85423cbdb5b56c55ed3658" class="tab" ><label for="7e6acb584e85423cbdb5b56c55ed3658-80ef399b97ee4e55af1787b73b397b6e" >iOS</label>
+<input type="radio" id="7e6acb584e85423cbdb5b56c55ed3658-e0edafd61b814719bb20c49a65922b3d" name="7e6acb584e85423cbdb5b56c55ed3658" class="tab" ><label for="7e6acb584e85423cbdb5b56c55ed3658-e0edafd61b814719bb20c49a65922b3d" >Windows</label></li>
 </ol>
 <div class="tab__content">
 <p>|Area|Info|
