--- a/framework/gettingstarted.html
+++ b/framework/gettingstarted.html
@@ -363,17 +363,17 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="b1757dab60a74c8ea1b657772dcf3002-2fed3319dfec44ccb5601d82bffdabd4" name="b1757dab60a74c8ea1b657772dcf3002" class="tab" checked><label for="b1757dab60a74c8ea1b657772dcf3002-2fed3319dfec44ccb5601d82bffdabd4" >General</label>
-<input type="radio" id="b1757dab60a74c8ea1b657772dcf3002-d5cd1f504df24c80b4700f11319f842c" name="b1757dab60a74c8ea1b657772dcf3002" class="tab" ><label for="b1757dab60a74c8ea1b657772dcf3002-d5cd1f504df24c80b4700f11319f842c" >Startup</label>
-<input type="radio" id="b1757dab60a74c8ea1b657772dcf3002-46df1aea0fb1401187bd43d56a27f505" name="b1757dab60a74c8ea1b657772dcf3002" class="tab" ><label for="b1757dab60a74c8ea1b657772dcf3002-46df1aea0fb1401187bd43d56a27f505" >Android</label>
-<input type="radio" id="b1757dab60a74c8ea1b657772dcf3002-d7976584a28d4ce8987b3814f884ca3e" name="b1757dab60a74c8ea1b657772dcf3002" class="tab" ><label for="b1757dab60a74c8ea1b657772dcf3002-d7976584a28d4ce8987b3814f884ca3e" >iOS</label>
-<input type="radio" id="b1757dab60a74c8ea1b657772dcf3002-296ad97c6db548d4a6307ec4abed8df6" name="b1757dab60a74c8ea1b657772dcf3002" class="tab" ><label for="b1757dab60a74c8ea1b657772dcf3002-296ad97c6db548d4a6307ec4abed8df6" >Windows</label>
+<input type="radio" id="cd29addd7a3c40208b59d49c9fda28e3-9cd461a385034d83b828eb7b5ba0f3da" name="cd29addd7a3c40208b59d49c9fda28e3" class="tab" checked><label for="cd29addd7a3c40208b59d49c9fda28e3-9cd461a385034d83b828eb7b5ba0f3da" >General</label>
+<input type="radio" id="cd29addd7a3c40208b59d49c9fda28e3-d46c761eb9734271863f02c570a11c1f" name="cd29addd7a3c40208b59d49c9fda28e3" class="tab" ><label for="cd29addd7a3c40208b59d49c9fda28e3-d46c761eb9734271863f02c570a11c1f" >Startup</label>
+<input type="radio" id="cd29addd7a3c40208b59d49c9fda28e3-8309e107bd54429cbeebab549effdfd0" name="cd29addd7a3c40208b59d49c9fda28e3" class="tab" ><label for="cd29addd7a3c40208b59d49c9fda28e3-8309e107bd54429cbeebab549effdfd0" >Android</label>
+<input type="radio" id="cd29addd7a3c40208b59d49c9fda28e3-36c77ded5b98499d9b186ffc1a9c6a9d" name="cd29addd7a3c40208b59d49c9fda28e3" class="tab" ><label for="cd29addd7a3c40208b59d49c9fda28e3-36c77ded5b98499d9b186ffc1a9c6a9d" >iOS</label>
+<input type="radio" id="cd29addd7a3c40208b59d49c9fda28e3-9a8b19e513c041788a6ac01a4a179409" name="cd29addd7a3c40208b59d49c9fda28e3" class="tab" ><label for="cd29addd7a3c40208b59d49c9fda28e3-9a8b19e513c041788a6ac01a4a179409" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
