--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -363,17 +363,17 @@
                                                             <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">v2.5.0</a>
+                                                            <a href="/release-notes/nextrelease">Next Release</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="8d64d8568611419693bde1ab973c4dc1-e9c1a1821a79403ebb91ad83e784cf4b" name="8d64d8568611419693bde1ab973c4dc1" class="tab" checked><label for="8d64d8568611419693bde1ab973c4dc1-e9c1a1821a79403ebb91ad83e784cf4b" >General</label>
-<input type="radio" id="8d64d8568611419693bde1ab973c4dc1-45c87ddf16fc4c5782aa533110528403" name="8d64d8568611419693bde1ab973c4dc1" class="tab" ><label for="8d64d8568611419693bde1ab973c4dc1-45c87ddf16fc4c5782aa533110528403" >Startup</label>
-<input type="radio" id="8d64d8568611419693bde1ab973c4dc1-1b2f1df43b6f4943ab8f6a3477c95f89" name="8d64d8568611419693bde1ab973c4dc1" class="tab" ><label for="8d64d8568611419693bde1ab973c4dc1-1b2f1df43b6f4943ab8f6a3477c95f89" >Android</label>
-<input type="radio" id="8d64d8568611419693bde1ab973c4dc1-2a1ba5653e504416bc653bb822d34553" name="8d64d8568611419693bde1ab973c4dc1" class="tab" ><label for="8d64d8568611419693bde1ab973c4dc1-2a1ba5653e504416bc653bb822d34553" >iOS</label>
-<input type="radio" id="8d64d8568611419693bde1ab973c4dc1-b245ab231e51411f97c3249ee7d0f147" name="8d64d8568611419693bde1ab973c4dc1" class="tab" ><label for="8d64d8568611419693bde1ab973c4dc1-b245ab231e51411f97c3249ee7d0f147" >Windows</label>
+<input type="radio" id="ff144a147fe5498b955a15ab4087f62c-c42015b5228443dfba252e4597ba7fac" name="ff144a147fe5498b955a15ab4087f62c" class="tab" checked><label for="ff144a147fe5498b955a15ab4087f62c-c42015b5228443dfba252e4597ba7fac" >General</label>
+<input type="radio" id="ff144a147fe5498b955a15ab4087f62c-551b1d5b56cf421bb257bcba900701f5" name="ff144a147fe5498b955a15ab4087f62c" class="tab" ><label for="ff144a147fe5498b955a15ab4087f62c-551b1d5b56cf421bb257bcba900701f5" >Startup</label>
+<input type="radio" id="ff144a147fe5498b955a15ab4087f62c-ad03c6587b604c76a8c14c7fad578ef9" name="ff144a147fe5498b955a15ab4087f62c" class="tab" ><label for="ff144a147fe5498b955a15ab4087f62c-ad03c6587b604c76a8c14c7fad578ef9" >Android</label>
+<input type="radio" id="ff144a147fe5498b955a15ab4087f62c-6790d6e878834e219d6b72620b14dbaa" name="ff144a147fe5498b955a15ab4087f62c" class="tab" ><label for="ff144a147fe5498b955a15ab4087f62c-6790d6e878834e219d6b72620b14dbaa" >iOS</label>
+<input type="radio" id="ff144a147fe5498b955a15ab4087f62c-30270dfe71294e13befd32f6821ebf7a" name="ff144a147fe5498b955a15ab4087f62c" class="tab" ><label for="ff144a147fe5498b955a15ab4087f62c-30270dfe71294e13befd32f6821ebf7a" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
